--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,12 +10,7 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
 set(SRC_DIR "${PROJECT_SOURCE_DIR}/src")
 set(DOC_DIR "${PROJECT_SOURCE_DIR}/doc")
 
-find_package(Qt5Core)
-if(Qt5Core_FOUND)
-	message(STATUS "Qt Version: ${Qt5Core_VERSION}")
-else()
-	message(FATAL_ERROR "Qt not found!")
-endif()
+find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Core)
 
 ## Subprojects
 add_subdirectory("${SRC_DIR}")
